<!--
  Copyright 2012 The Android Open Source Project
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
      http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/text1"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textSize="24sp" >

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/first_name" style="@style/styleTextViewH4"/>
        <EditText android:id="@+id/ET_firstName" style="@style/styleEditText"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/last_name" style="@style/styleTextViewH4"/>
        <EditText android:id="@+id/ET_lastName" style="@style/styleEditText"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/phone" style="@style/styleTextViewH4"/>
        <EditText android:id="@+id/ET_phone" style="@style/styleEditText"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/email" style="@style/styleTextViewH4"/>
        <EditText android:id="@+id/ET_email" style="@style/styleEditText"/>
    </LinearLayout>


    <Button
            android:id="@+id/insert"
            android:text="@string/insert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/read"
            android:text="@string/read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


